RESOLVED FIXED76184
TextureMapper: Fix the fillsForward transform adjustment in syncAnimations.
https://bugs.webkit.org/show_bug.cgi?id=76184
Summary TextureMapper: Fix the fillsForward transform adjustment in syncAnimations.
Jocelyn Turcotte
Reported 2012-01-12 09:02:09 PST
TextureMapper: Fix the fillsForward transform adjustment in syncAnimations.
Attachments
Patch (1.93 KB, patch)
2012-01-12 09:02 PST, Jocelyn Turcotte
noam: review+
Jocelyn Turcotte
Comment 1 2012-01-12 09:02:42 PST
Jocelyn Turcotte
Comment 2 2012-01-13 06:38:43 PST
Note You need to log in before you can comment on or make changes to this bug.