TextureMapper: Fix the fillsForward transform adjustment in syncAnimations. https://bugs.webkit.org/show_bug.cgi?id=76184

Reviewed by Noam Rosenthal.

Also make the intention clearer by using setTransform and setOpacity.

* platform/graphics/texmap/TextureMapperNode.cpp:
(WebCore::TextureMapperNode::syncAnimations):

Canonical link: https://commits.webkit.org/93081@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104930 268f45cc-cd09-0410-ab3c-d52691b4dbfc